--- a/website/unit1.html
+++ b/website/unit1.html
@@ -128,7 +128,13 @@
             <h2 tabindex = "2"> Day 1 Notes</h2>
                 <a tabindex = "2" class="button PDF" aria-label="Download PDF" href=../output/lessons/Day_1_intro_datatypes.pdf download>PDF</a>  <a tabindex = "2" class="button LaTeX" aria-label="Download .LaTeX" 
                     href=../notes/lessons-flat/Day_1_intro_datatypes.zip download>LaTeX</a>  <a tabindex = "2" class="button HTML" aria-label="Open HTML file of Document in New Tab" 
-                    href= ../output/lessons/Day_1_intro_datatypes.html target="HTML">Raw HTML</a> <br> <iframe class="PDFjs" id="Day_1_intro_datatypes.tex" src="web/viewer.html?file=../../output/lessons/Day_1_intro_datatypes.pdf" 
+                    href= ../output/lessons/Day_1_intro_datatypes.html target="HTML">Raw HTML</a>
+                    <label class="switch">
+                    <input type="checkbox" id="toggle-1">
+                    <span class="slider round"></span>
+                    </label>
+                     <script> document.getElementById("toggle-1").onclick = function() {annotations(
+                     1, "../output/lessons/Day_1_intro_datatypes.pdf","../files/Day_1_intro_datatypes_annotated.pdf", "Day_1_intro_datatypes.tex")}; </script> <br> <iframe class="PDFjs" id="Day_1_intro_datatypes.tex" src="web/viewer.html?file=../../output/lessons/Day_1_intro_datatypes.pdf" 
                 title="webviewer" frameborder="0" width="100%" height="600"></iframe> <h2 tabindex = "2"> Day 2 Notes</h2>
                 <a tabindex = "2" class="button PDF" aria-label="Download PDF" href=../output/lessons/Day_2_collection_types.pdf download>PDF</a>  <a tabindex = "2" class="button LaTeX" aria-label="Download .LaTeX" 
                     href=../notes/lessons-flat/Day_2_collection_types.tex download>LaTeX</a>  <a tabindex = "2" class="button HTML" aria-label="Open HTML file of Document in New Tab" 
